Fix project tiles on tap issue with z-index

--- a/styles/global.css
+++ b/styles/global.css
@@ -341,6 +341,7 @@ h1, h2, h3, h4, h5 {
   background-size: contain;
   background-repeat: no-repeat;
   transform: rotate(115deg);
+  z-index: -1;
 }
 
 .cosmos_cover:before {
